# dynopp

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
dynopp/: CMakeLists.txt  archive.h  binder.cpp  binder.hpp  dynamic_binder.cpp  dynamic_binder.hpp  dynamic_object.hpp  object.hpp  utility.hpp
dynopp/archives/: anyarchive.hpp  anystream.hpp
tests/: CMakeLists.txt  anystream.hpp  main.cpp
